--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^3.4.10",
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@types/react": "19.2.14",
+    "typescript": "5.9.3"
   }
 }
